--- a/css/main.css
+++ b/css/main.css
@@ -227,3 +227,39 @@ a.navbar-brand {
     background-image: url(../img/bg-icons-2.png);
 
 }
+
+.cardapio {
+
+    padding-top: 50px;
+    padding-bottom: 150px;
+}
+.container-menu{
+    margin-bottom: 40px;
+}
+
+
+.card-item{
+    height: 360px;
+}
+
+
+.card-item .img-produto img{
+    width: 100%;
+    border-radius: 11px;
+}
+
+.card-item .title-produto{
+    color: var(--color-back);
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    height: 40px;
+    margin-bottom: 0px;
+
+}
+
+.card-item .price-produto{
+
+    color: var(--color-primary);
+    font-size: 24px;
+}
