--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
 :root {
     --color-background: #fffdf7;
     --color-black: #212121;
+    --color-black-heavy: #000000;
     --color-text: #4f4f4f;
     --color-text-out: #90908e;
     --color-primary: #ffbf00;
@@ -183,24 +184,26 @@ a.navbar-brand {
     bottom: 10px;
 }
 
-.servicos{
+.servicos {
     padding-top: 100px;
     padding-bottom: 150px;
 }
-.hint-title{
+
+.hint-title {
     color: var(--color-primary);
     font-size: 16px;
     text-transform: uppercase;
     letter-spacing: 5px;
 }
 
-.title{
+.title {
     color: var(--color-black);
     font-size: 40px;
     margin-top: 5px;
     margin-bottom: 30px;
 }
-.card-icon{
+
+.card-icon {
     height: 150px;
     margin: 0 auto;
     margin-bottom: 30px;
@@ -214,11 +217,13 @@ a.navbar-brand {
     font-size: 15px;
     padding: 0px 30px;
 }
+
 .card-text p {
     font-size: 22px;
     color: var(--color-black);
     margin-bottom: 10px;
 }
+
 .background-servicos {
     position: absolute;
     left: 0;
@@ -233,22 +238,32 @@ a.navbar-brand {
     padding-top: 50px;
     padding-bottom: 150px;
 }
-.container-menu{
+
+.cardapio .background-cardapio {
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 500px;
+    background-image: url(../img/bg-icons-1.png);
+
+}
+
+.container-menu {
     margin-bottom: 40px;
 }
 
 
-.card-item{
+.card-item {
     height: 360px;
 }
 
 
-.card-item .img-produto img{
+.card-item .img-produto img {
     width: 100%;
     border-radius: 11px;
 }
 
-.card-item .title-produto{
+.card-item .title-produto {
     color: var(--color-back);
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -258,8 +273,72 @@ a.navbar-brand {
 
 }
 
-.card-item .price-produto{
+.card-item .price-produto {
 
     color: var(--color-primary);
     font-size: 24px;
+}
+
+.card-item .add-carrinho {
+    /*display:none;*/
+    text-align: center;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-menos {
+    color: var(--color-black-heavy);
+    padding: 5px 7px;
+    border: 2px solid var(--color-black-heavy);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.btn-mais {
+    color: var(--color-black-heavy);
+    padding: 5px 7px;
+    border: 2px solid var(--color-black-heavy);
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.add-numero-itens {
+    color: var(--color-black-heavy);
+    padding: 2px 15px;
+    border-top: 2px solid var(--color-black-heavy);
+    border-bottom: 2px solid var(--color-black-heavy);
+    font-size: 18px;
+}
+
+.btn-add {
+    border: 2px solid var(--color-black-heavy);
+    font-size: 16px;
+    padding: 4px 10px;
+    border-radius: 10px;
+    color: var(--color-white);
+    background-color: var(--color-black-heavy);
+    margin-left: 15px;
+}
+
+.card-item:hover {
+    background-color: var(--color-primary);
+
+}
+
+.card-item:hover .title-produto {
+    display: none;
+}
+
+.card-item:hover .add-carrinho {
+    display: flex;
+}
+
+.card-item:hover .price-produto {
+    color: var(--color-black-heavy) !important;
+    margin-top: 20px;
 }
